[frontend/components] Fix truncation of long notes (ISH-473)

--- a/Iceshrimp.Frontend/Components/Note/NoteBody.razor.css
+++ b/Iceshrimp.Frontend/Components/Note/NoteBody.razor.css
@@ -3,6 +3,9 @@
     flex-direction: column;
     text-wrap: normal;
     white-space: pre-wrap;
+    max-height: 40em;
+    height: auto;
+    overflow-y: hidden;
 }
 
 .cw {
@@ -20,10 +23,14 @@
     bottom: 20px;
     width: 100%;
     margin-top: 0.5em;
+    @container note-body (max-height: 20rem){
+        display: none;
+    }
 }
 
-.truncated {
-    overflow: hidden;
+.show-full {
+    overflow: initial;
+    max-height: initial;
 }
 
 .hidden {
